RESOLVED FIXED51530
[EFL] Fix ContextMenu removal
https://bugs.webkit.org/show_bug.cgi?id=51530
Summary [EFL] Fix ContextMenu removal
Lucas De Marchi
Reported 2010-12-23 03:35:13 PST
[EFL] Fix ContextMenu removal
Attachments
Patch (6.48 KB, patch)
2010-12-23 03:38 PST, Lucas De Marchi
no flags
Patch (6.49 KB, patch)
2010-12-23 04:19 PST, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-12-23 03:38:34 PST
WebKit Review Bot
Comment 2 2010-12-23 03:39:20 PST
Attachment 77321 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'ChangeLog', u'WebKit/efl/ChangeLog', u'WebKit/efl/ewk/ewk_contextmenu.cpp', u'WebKit/efl/ewk/ewk_private.h', u'WebKit/efl/ewk/ewk_view.cpp', u'cmake/OptionsEfl.cmake']" exit_code: 1 ChangeLog:21: Line contains tab character. [whitespace/tab] [5] WebKit/efl/ChangeLog:21: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Lucas De Marchi
Comment 3 2010-12-23 04:19:43 PST
WebKit Commit Bot
Comment 4 2010-12-23 06:41:44 PST
Comment on attachment 77326 [details] Patch Clearing flags on attachment: 77326 Committed r74556: <http://trac.webkit.org/changeset/74556>
WebKit Commit Bot
Comment 5 2010-12-23 06:41:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.