2010-12-23  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] Fix ContextMenu removal
        https://bugs.webkit.org/show_bug.cgi?id=51530

        Fix ContextMenu removal

        In r74207 the support for ContextMenu was removed from EFL while the
        code is being ported to the new CROSS_PLATFORM_MENUS due to build
        breakage.  However there were some missing removals in the shutdown
        logic that introduced a bug, leading to a segmentation fault when
        ContexController was destroyed.

        The best way to effectively disable the ContextMenu is to conditionally
        compile the meaningful stuff by surrounding with "#if
        ENABLE(CONTEXT_MENUS)" and then disabling it in CMake.

        * cmake/OptionsEfl.cmake: Disable ContextMenu and don't pretend we
        implement CROSS_PLATFORM_MENUS yet.
2010-12-23  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

        Reviewed by Kenneth Rohde Christiansen.

        [EFL] Fix ContextMenu removal
        https://bugs.webkit.org/show_bug.cgi?id=51530

        Fix ContextMenu removal

        In r74207 the support for ContextMenu was removed from EFL while the
        code is being ported to the new CROSS_PLATFORM_MENUS due to build
        breakage.  However there were some missing removals in the shutdown
        logic that introduced a bug, leading to a segmentation fault when
        ContexController was destroyed.

        The best way to effectively disable the ContextMenu is to conditionally
        compile the meaningful stuff by surrounding with "#if
        ENABLE(CONTEXT_MENUS)" and then disabling it in CMake.

        * ewk/ewk_contextmenu.cpp: surround need parts with #if
        ENABLE(CONTEXT_MENUS).
        (ewk_context_menu_destroy): ditto.
        (ewk_context_menu_item_select): ditto.
        * ewk/ewk_private.h: ditto.
        * ewk/ewk_view.cpp: ditto.

Canonical link: https://commits.webkit.org/64895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74556 268f45cc-cd09-0410-ab3c-d52691b4dbfc